--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
 		/>
 		<meta name="theme-color" content="#000000" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<link rel="shortcut icon" href="%PUBLIC_URL%/logoMinistere.pngfd" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/logoMinistere.png" />
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -22,4 +22,3 @@
 		<div id="root"></div>
 	</body>
 </html>
-
